Fix font size of getting started page on mobile

--- a/_sass/components/_getting-started-page.scss
+++ b/_sass/components/_getting-started-page.scss
@@ -9,6 +9,7 @@
 
   @media #{$bp-below-mobile} {
     font-size: 18px;
+    text-align: left;
   }
 }
 
@@ -26,13 +27,21 @@
 
 .gs-link {
   text-decoration: none;
-  font-size: 20px;
+  font-size: 1.5rem;
   text-align: center;
+
+  @media #{$bp-below-mobile} {
+    font-size: 1.25rem;
+  }
 }
 
 .getting-started-step-title-overview {
   text-align: center; 
-  font-size: 20px;
+  font-size: 1.5rem;
+
+  @media #{$bp-below-mobile} {
+    font-size: 1.25rem;
+  }
 }
 
 .getting-started-step-title-header {
@@ -118,7 +127,7 @@
   color: black;
   cursor: pointer;
   transition: 0.4s;
-  font-size: 20px;
+  font-size: 1.25rem;
   text-align: left;
   border-bottom: 0.5px solid gray;
   min-width: 835px;
@@ -127,6 +136,7 @@
   @media #{$bp-below-mobile} {
     margin-top: 20px;
     min-width: 255px;
+    font-size: 1.125rem;
   }
 }
 
